test_cases/pass/p15.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i, j
i=0
REPEAT WHEN (i < 2)
START REPEAT
    j=0
    REPEAT WHEN (j < 2)
    START REPEAT
        PRINT: i & j & " "
        j=j+1
    END REPEAT
    i=i+1
END REPEAT
END SCRIPT
