test_cases/fail/f50.lxr
SCRIPT AREA
START SCRIPT
REPEAT WHEN (3.14)
START REPEAT
    PRINT: "pi"
END REPEAT
END SCRIPT
